<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">File Manager</string>
    <string name="select_file_title">Select File</string>
    <string name="selected">Selected</string>
	<string name="category">Category</string>
	<string name="directory">Device</string>
	<string name="directory2">Directory</string>
    <string name="kanbox">KanBox</string>
	<string name="added_favorite">Added to Favorites</string>
    <string name="cancel">Cancel</string>
    <string name="category_all">All</string>
    <string name="category_apk">APKs</string>
    <string name="category_apk_detail">APKs</string>
    <string name="category_document">Docs</string>
    <string name="category_favorite">Favorites</string>
    <string name="category_game">Selected</string>
    <string name="category_music">Music</string>
    <string name="category_other">Misc</string>
    <string name="category_picture">Pics</string>
    <string name="category_download">Downloads</string>
    <string name="category_title">File Management</string>
    <string name="category_video">Videos</string>
    <string name="category_zip">Zips</string>
    <string name="category_app">Apps</string>
    <string name="confirm">OK</string>
    <string name="confirm_know">OK</string>
    <string name="enable_sd_card">SD card is not available, please connect one</string>
    <string name="fail_to_create_folder">Failed to create the folder, the folder already exists</string>
    <string name="fail_to_rename">Failed to rename the file or folder as it already exists</string>
    <string name="file_info_canread">Readable:</string>
    <string name="file_info_canwrite">Writable:</string>
    <string name="file_info_ishidden">Hidden:</string>
    <string name="file_info_location">Path:</string>
    <string name="cloud_file_info_remote_location">Cloud Path:</string>
    <string name="cloud_file_info_local_location">Local Path:</string>
    <string name="file_info_modified">Modified:</string>
    <string name="file_info_size">Size:</string>
    <string name="file_size">%d Bytes</string>
    <string name="install_failed">Installation failed</string>
    <string name="install_successful">Installation successful</string>
    <string name="instruction">Enter following address in your FTP Client:</string>
    <string name="instruction_pre">Start service to enable FTP server</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_sort">Sort by</string>
    <string name="menu_item_sort_date">Date</string>
    <string name="menu_item_sort_name">Name</string>
    <string name="menu_item_sort_size">Size</string>
    <string name="menu_item_sort_type">Type</string>
    <string name="new_folder_name">New folder</string>
    <string name="no">No</string>
    <string name="no_file">No files</string>
    <string name="search_no_file">No file found</string>
    <string name="no_wifi">No Wi-Fi network</string>
    <string name="operation_cancel">Cancel</string>
    <string name="operation_selectok">Open</string>
    <string name="operation_addsafe">Lock</string>
    <string name="operation_addcloud">Upload</string>
    <string name="operation_cancel_selectall">Deselect All</string>
    <string name="operation_copy">Copy</string>
    <string name="operation_create_folder">New folder</string>
    <string name="operation_create_folder_message">Enter folder name</string>
    <string name="operation_delete">Delete</string>
    <string name="operation_delete_confirm_message">Confirm Deletion?</string>
    <string name="operation_deleting">Deleting...</string>
    <string name="operation_favorite">Add to Favorites</string>
    <string name="operation_hide_sys">Hide hidden files</string>
    <string name="operation_info">Details</string>
    <string name="operation_install">Install</string>
    <string name="operation_move">Move</string>
    <string name="operation_moving">Moving...</string>
    <string name="operation_paste">Paste</string>
    <string name="operation_paste_cancel">Cancel</string>
    <string name="operation_pasting">Pasting...</string>
    <string name="operation_refresh">Refresh</string>
    <string name="operation_remove">Remove</string>
    <string name="operation_rename">Rename</string>
    <string name="operation_rename_message">Enter a new name</string>
    <string name="operation_selectall">Select All</string>
    <string name="operation_send">Share</string>
    <string name="operation_show_sys">Show hidden files</string>
    <string name="operation_unfavorite">Remove from Favorites</string>
    <string name="operation_add_safe">Add into Safebox</string>
    <string name="removed_favorite">Removed from Favorites</string>
    <string name="sd_folder">SD card</string>
    <string name="search_hint">Search Files</string>
    <string name="search_title">Search Files</string>
    <string name="tab_bluetooth">Bluetooth</string>
    <string name="tab_category">Browse</string>
    <string name="tab_remote">FTP</string>
    <string name="tab_sd">SD card</string>
    <string name="wifi_state">WLAN Status</string>
    <string name="yes">Yes</string>
    <string name="just_now">just now</string>
    <string name="time_language">en</string>
    <string name="list_today_format">today %m-%d</string>
    <string name="list_yesterday_format">yesterday %m-%d</string>
    <string name="list_before_yesterday_format">%m-%d</string>
    <string name="list_this_year_format">%m-%d</string>
    <string name="list_before_year_format">%y-%m-%d</string>
    <string name="list_last_week_format"></string>
    <string name="list_seconds_passed">\'s ago</string>
    <string name="list_minutes_passed">\'m ago</string>
    <string name="list_yesterday">Yesterday</string>
    <string name="list_before_yesterday">2 days ago</string>
    <string name="btn_back_default">Back</string>
    <string name="common_file_category_document">Document</string>
    <string name="common_file_category_audio">Music</string>
    <string name="common_file_category_apk">Apk</string>
    <string name="file_scan_finish">File scan finished</string>
    <string name="file_browser_301">Sorry, no permission!</string>
    <string name="sort_order_by_name_asc">Sort by filename asc</string>
    <string name="sort_order_by_name_desc">Sort by filename desc</string>
    <string name="sort_order_by_date_asc">Sort by date asc</string>
    <string name="sort_order_by_date_desc">Sort by date desc</string>
    <string name="sort_order_by_size_asc">Sort by file size asc</string>
    <string name="sort_order_by_size_desc">Sort by file size desc</string>
    <string name="sort_order_by_extension_asc">Sort by file extension asc</string>
    <string name="sort_order_by_extension_desc">Sort by file extension desc</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_move">Move</string>
    <string name="menu_send">Send</string>
    <string name="menu_install">Install</string>
    <string name="menu_view">View</string>
    <string name="menu_ringtone">Set as ringtone</string>
    <string name="menu_paste_confirm">Paste</string>
    <string name="menu_paste_cancel">Cancel</string>
    <string name="paste">Paste</string>
    <string name="search">Search</string>
    <string name="tools">Tools</string>
    <string name="search_music">Search Music</string>
    <string name="search_apk">Search Apk</string>
    <string name="search_video">Search Video</string>
    <string name="search_image">Search Photo</string>
    <string name="search_document">Search Document</string>
    <string name="search_zip">Search Zip</string>
    <string name="search_all">Search Files</string>
    <string name="loading">scanning...</string>
    <string name="scan_refresh">Scan Refresh</string>
    <string name="file_copy_finish">Copy success</string>
    <string name="file_move_finish">Move success</string>
    <string name="file_add_to_cloud_finish">Upload to cloud success</string>
    <string name="file_add_to_cloud_single_failed">Upload to cloud failed</string>
    <string name="file_add_to_cloud_failed">Upload to cloud failed</string>
    <string name="file_add_to_safe_finish">Add to safebox success</string>
    <string name="file_add_to_safe_single_failed">Add to safebox failed</string>
    <string name="file_add_to_safe_failed">Add to safebox failed</string>
    <string name="file_delete_finish">Delete success</string>
    <string name="file_delete_failed">Delete failed</string>
    <string name="file_delete_single_failed">Delete failed</string>
    <string name="file_delete_has_failed">Delete failed</string>
    <string name="file_move_failed">Move failed</string>
    <string name="file_copy_failed">Copy failed</string>
    <string name="back_again_to_exit">Press again to exit</string>
    <string name="paste_or_cancel">Please select paste or cancel</string>
    <string name="set_ringtone_success">Set ringtone success</string>
    <string name="set_ringtone_fail">Set ringtone failed</string>
    <string name="set_wallpaper_success">Set wallpaper success</string>
    <string name="set_wallpaper_fail">Set wallpaper failed</string>
    <string name="add_favorite_success">Add to favorite success</string>
    <string name="add_favorite_fail">Add to favorite fail</string>
    <string name="remove_favorite_success">Remove from favorite success</string>
    <string name="remove_favorite_fail">Remove from favorite fail</string>
    <string name="app_remove">Uninstall</string>
    <string name="installed_apps">Installed apps</string>
    <string name="downloaded_apks">Downloaded apks</string>
    <string name="btn_settings">Tools</string>
    <string name="settings_title">Tools</string>
    <string name="file_category_match">File Category-Extension Match</string>
    <string name="menu_rename">Rename</string>
<string name="menu_view_detail">Properties</string>
<string name="menu_add_favorite">Mark Favorite</string>
<string name="zip">压缩</string>
<string name="unzip">解压</string>
<string name="unzip_cancel">取消</string>
<string name="zip_cancel">取消</string>
<string name="menu_remove_favorite">Undo Favorite</string>
<string name="menu_search">Search Files</string>
<string name="menu_create">Create Folder</string>
<string name="menu_cloud_add">Upload File</string>
<string name="menu_cloud_add_image">Upload Image</string>
<string name="menu_cloud_add_audio">Upload Audio</string>
<string name="menu_cloud_add_video">Upload Video</string>
<string name="menu_cloud_add_apk">Upload Apk</string>
<string name="menu_cloud_add_document">Upload Document</string>
<string name="menu_cloud_add_zip">Upload Zip</string>
<string name="menu_sort">Sort File</string>
<string name="menu_display">Display</string>
<string name="menu_logout">Log out</string>
<string name="menu_sort_date_asc">Date asc</string>
<string name="menu_sort_date_desc">Date desc</string>
<string name="menu_sort_name_asc">Name asc</string>
<string name="menu_sort_name_desc">Name desc</string>
<string name="menu_sort_size_asc">Size asc</string>
<string name="menu_sort_size_desc">Size desc</string>
<string name="menu_sort_extension_asc">Extension asc</string>
<string name="menu_sort_extension_desc">Extension desc</string>
<string name="add_safe">Add</string>
    <string name="menu_safe_add_photo">Add photo</string>
    <string name="menu_safe_add_audio">Add audio</string>
    <string name="menu_safe_add_video">Add video</string>
    <string name="overflow_share">Share</string>
    <string name="overflow_copy">Copy</string>
    <string name="overflow_cut">Cut</string>
    <string name="overflow_delete">Delete</string>
    <string name="overflow_rename">Rename</string>
    <string name="overflow_details">Details</string>
    <string name="overflow_add_favorite">Mark favorite</string>
    <string name="overflow_remove_favorite">Undo favorite</string>
    <string name="overflow_zip">Zip</string>
    <string name="overflow_unzip">Unzip</string>
</resources>