<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:beluga="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_kanbox_display"
        android:icon="@drawable/ic_action_view_as_grid"
        android:title="@string/menu_display"
        beluga:showAsAction="ifRoom" />
    <item android:id="@+id/menu_kanbox_sort"
          android:icon="@drawable/ic_action_sort_asc"
          android:title="@string/menu_sort"
        beluga:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/menu_kanbox_sort_by_date_asc"
                  android:icon="@drawable/ic_action_sort_asc"
                  android:title="@string/menu_sort_date_asc"
                    />
            <item android:id="@+id/menu_kanbox_sort_by_date_desc"
                  android:icon="@drawable/ic_action_sort_desc"
                  android:title="@string/menu_sort_date_desc"
                    />
            <item android:id="@+id/menu_kanbox_sort_by_name_asc"
                  android:icon="@drawable/ic_action_sort_asc"
                  android:title="@string/menu_sort_name_asc"
                    />
            <item android:id="@+id/menu_kanbox_sort_by_name_desc"
                  android:icon="@drawable/ic_action_sort_desc"
                  android:title="@string/menu_sort_name_desc"
                    />
            <item android:id="@+id/menu_kanbox_sort_by_size_asc"
                  android:icon="@drawable/ic_action_sort_asc"
                  android:title="@string/menu_sort_size_asc"
                    />
            <item android:id="@+id/menu_kanbox_sort_by_size_desc"
                  android:icon="@drawable/ic_action_sort_desc"
                  android:title="@string/menu_sort_size_desc"
                    />
            <item android:id="@+id/menu_kanbox_sort_by_extension_asc"
                  android:icon="@drawable/ic_action_sort_asc"
                  android:title="@string/menu_sort_extension_asc"
                    />
            <item android:id="@+id/menu_kanbox_sort_by_extension_desc"
                  android:icon="@drawable/ic_action_sort_desc"
                  android:title="@string/menu_sort_extension_desc"
                    />
        </menu>
    </item>
    <item
        android:id="@+id/menu_cloud_logout"
        android:icon="@drawable/ic_action_back"
        android:title="@string/menu_logout"
        beluga:showAsAction="never"
        />
    <item android:id="@+id/menu_cloud_create"
        android:icon="@drawable/ic_action_new"
        android:title="@string/menu_create"
        beluga:showAsAction="never" />
    <item android:id="@+id/menu_cloud_add"
        android:icon="@drawable/ic_action_new"
        android:title="@string/menu_cloud_add"
        beluga:showAsAction="always" >
        <menu>
            <item android:id="@+id/menu_cloud_add_image"
                android:icon="@drawable/file_category_icon_image"
                android:title="@string/menu_cloud_add_image"
                />
            <item android:id="@+id/menu_cloud_add_video"
                android:icon="@drawable/file_category_icon_video"
                android:title="@string/menu_cloud_add_video"
                />
            <item android:id="@+id/menu_cloud_add_audio"
                android:icon="@drawable/file_category_icon_audio"
                android:title="@string/menu_cloud_add_audio"
                />
            <item android:id="@+id/menu_cloud_add_apk"
                android:icon="@drawable/file_category_icon_apk"
                android:title="@string/menu_cloud_add_apk"
                />
            <item android:id="@+id/menu_cloud_add_zip"
                android:icon="@drawable/file_category_icon_zip"
                android:title="@string/menu_cloud_add_zip"
                />
            <item android:id="@+id/menu_cloud_add_document"
                android:icon="@drawable/file_category_icon_document"
                android:title="@string/menu_cloud_add_document"
                />
            <!--item android:id="@+id/menu_cloud_add_by_directory"
                android:icon="@drawable/ic_menu_directory_holo_light"
                android:title="@string/menu_cloud_add_others"
                /-->
        </menu>
    </item>
    <!--item android:id="@+id/menu_search"
          android:icon="@drawable/ic_menu_search_holo_light"
          android:title="@string/menu_search"
          android:showAsAction="collapseActionView|always"
          android:actionViewClass="com.actionbarsherlock.widget.SearchView" /-->
</menu>