<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:beluga="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_resource_display"
          android:icon="@drawable/ic_action_view_as_grid"
          android:title="@string/menu_display"
        beluga:showAsAction="always" />
    <item android:id="@+id/menu_resource_sort"
          android:icon="@drawable/ic_action_sort_asc"
          android:title="@string/menu_sort"
        beluga:showAsAction="always">
        <menu>
            <item android:id="@+id/menu_resource_sort_by_date_asc"
                  android:icon="@drawable/ic_action_sort_asc"
                  android:title="@string/menu_sort_date_asc"
                    />
            <item android:id="@+id/menu_resource_sort_by_date_desc"
                  android:icon="@drawable/ic_action_sort_desc"
                  android:title="@string/menu_sort_date_desc"
                    />
            <item android:id="@+id/menu_resource_sort_by_name_asc"
                  android:icon="@drawable/ic_action_sort_asc"
                  android:title="@string/menu_sort_name_asc"
                    />
            <item android:id="@+id/menu_resource_sort_by_name_desc"
                  android:icon="@drawable/ic_action_sort_desc"
                  android:title="@string/menu_sort_name_desc"
                    />
            <item android:id="@+id/menu_resource_sort_by_size_asc"
                  android:icon="@drawable/ic_action_sort_asc"
                  android:title="@string/menu_sort_size_asc"
                    />
            <item android:id="@+id/menu_resource_sort_by_size_desc"
                  android:icon="@drawable/ic_action_sort_desc"
                  android:title="@string/menu_sort_size_desc"
                    />
            <item android:id="@+id/menu_resource_sort_by_extension_asc"
                  android:icon="@drawable/ic_action_sort_asc"
                  android:title="@string/menu_sort_extension_asc"
                    />
            <item android:id="@+id/menu_resource_sort_by_extension_desc"
                  android:icon="@drawable/ic_action_sort_desc"
                  android:title="@string/menu_sort_extension_desc"
                    />
        </menu>
    </item>
    <item android:id="@+id/menu_resource_search"
          android:icon="@drawable/ic_ab_search"
          android:title="@string/menu_search"
        beluga:showAsAction="never"/>
</menu>