<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:beluga="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/file_operation_delete"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/operation_delete"
        beluga:showAsAction="always" />
    <item android:id="@+id/file_operation_copy"
        android:icon="@drawable/ic_action_copy"
        android:title="@string/operation_copy"
        beluga:showAsAction="always" />
    <item android:id="@+id/file_operation_move"
        android:icon="@drawable/ic_action_cut"
        android:title="@string/operation_move" />
    <!--item android:id="@+id/file_operation_cancel"
        android:icon="@drawable/operation_button_cancel"
        android:title="@string/operation_cancel" /-->
    <item android:id="@+id/file_operation_selectall"
        android:icon="@drawable/ic_action_select_all"
        android:title="@string/operation_selectall" />
    <!--item android:id="@+id/file_operation_favorite"
        android:icon="@drawable/operation_button_favorite"
        android:title="@string/operation_favorite"
        /-->
    <item android:id="@+id/file_operation_send"
        android:icon="@drawable/ic_action_share"
        android:title="@string/operation_send"
        />
    <group android:id="@+id/file_operation_single">
        <item android:id="@+id/file_operation_rename"
            android:title="@string/menu_rename"
            beluga:showAsAction="never"/>
        <item android:id="@+id/file_operation_details"
            android:title="@string/menu_view_detail"
            beluga:showAsAction="never"/>
        <item android:id="@+id/file_operation_addfavorite"
            android:title="@string/menu_add_favorite"
            beluga:showAsAction="never"/>
        <item android:id="@+id/file_operation_removefavorite"
            android:title="@string/menu_remove_favorite" />

    </group>


</menu>