<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:beluga="http://schemas.android.com/apk/res-auto">
   <item android:id="@+id/menu_ringtone" android:menuCategory="secondary" android:title="@string/menu_ringtone" />
   <item android:id="@+id/menu_send" android:menuCategory="secondary" android:title="@string/menu_send" />
   <item android:id="@+id/menu_rename" android:menuCategory="secondary" android:title="@string/menu_rename" />
   <item android:id="@+id/menu_add_favorite" android:menuCategory="secondary" android:title="@string/menu_add_favorite" />
   <item android:id="@+id/menu_view_detail" android:menuCategory="secondary" android:title="@string/menu_view_detail" />
   <!--item android:id="@+id/menu_add_safe" android:title="@string/menu_add_safe"/-->
</menu>