<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
	<HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        >
	    <LinearLayout android:id="@+id/operation_bar" android:visibility="gone" android:background="@drawable/operation_bar_bg" android:layout_width="wrap_content" android:layout_height="wrap_content"
	        android:gravity="center_vertical">
	        <TextView android:id="@+id/button_operation_delete" android:text="@string/operation_delete" android:drawableTop="@drawable/operation_button_delete" style="@style/FileViewOperationButtonStytle" />
	        <TextView android:id="@+id/button_operation_copy" android:text="@string/operation_copy" android:drawableTop="@drawable/operation_button_copy" style="@style/FileViewOperationButtonStytle" />
	        <TextView android:id="@+id/button_operation_move" android:text="@string/operation_move" android:drawableTop="@drawable/operation_button_move" style="@style/FileViewOperationButtonStytle" />
	        <TextView android:id="@+id/button_operation_cancel" android:text="@string/operation_cancel" android:drawableTop="@drawable/operation_button_cancel" style="@style/FileViewOperationButtonStytle" />	  
	        <TextView android:id="@+id/button_operation_selectall" android:text="@string/operation_selectall" android:drawableTop="@drawable/operation_button_selectall" style="@style/FileViewOperationButtonStytle" />	              
	       	<TextView android:id="@+id/button_operation_favorite" android:text="@string/operation_favorite" android:drawableTop="@drawable/operation_button_favorite" style="@style/FileViewOperationButtonStytle" />
	       	<TextView android:id="@+id/button_operation_send" android:text="@string/operation_send" android:drawableTop="@drawable/operation_button_send" style="@style/FileViewOperationButtonStytle" />
	       	<!--TextView android:id="@+id/button_operation_install" android:text="@string/operation_install" android:drawableTop="@drawable/operation_button_install" style="@style/FileViewOperationButtonStytle" /--> 
	    </LinearLayout>
 	</HorizontalScrollView>
 	
	<LinearLayout
        android:id="@+id/paste_layout"
       	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/operation_bar_bg" 
        android:padding="10dip"
        android:visibility="gone"
        android:gravity="center"
        >
        <Button android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:id="@+id/paste"
            android:text="@string/paste"
            android:layout_weight="1.0"
            />
        <Button android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:id="@+id/paste_cancel"
            android:text="@string/cancel"
            android:layout_weight="1.0"
            />
    </LinearLayout>
    
	<LinearLayout
        android:id="@+id/zip_layout"
       	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/operation_bar_bg" 
        android:padding="10dip"
        android:visibility="gone"
        android:gravity="center"
        >
        <Button android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:id="@+id/zip"
            android:text="@string/zip"
            android:layout_weight="1.0"
            />
        <Button android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:id="@+id/zip_cancel"
            android:text="@string/zip_cancel"
            android:layout_weight="1.0"
            />
    </LinearLayout>
    
		<LinearLayout
        android:id="@+id/unzip_layout"
       	android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/operation_bar_bg" 
        android:padding="10dip"
        android:visibility="gone"
        android:gravity="center"
        >
        <Button android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:id="@+id/unzip"
            android:text="@string/unzip"
            android:layout_weight="1.0"
            />
        <Button android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:id="@+id/unzip_cancel"
            android:text="@string/unzip_cancel"
            android:layout_weight="1.0"
            />
    </LinearLayout>
    
</FrameLayout>