<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:beluga="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_action_lock"
        android:title="@string/add_safe"
        beluga:showAsAction="always" >
        <menu>
            <item android:id="@+id/menu_safe_add_photo"
                android:icon="@null"
                android:title="@string/menu_safe_add_photo"
                />
            <item android:id="@+id/menu_safe_add_audio"
                android:icon="@null"
                android:title="@string/menu_safe_add_audio"
                />
            <item android:id="@+id/menu_safe_add_video"
                android:icon="@null"
                android:title="@string/menu_safe_add_video"
                />
        </menu>
    </item>
</menu>